syntax = "proto3";
 
//package helloworld;
 
// The greeting service definition.
service Weather {
    // Sends a greeting
    rpc QueryWeather (QueryRequest) returns (QueryReply) {}
} 
    
// The request message containing the user's name.
message QueryRequest {
    string name = 1;
}  
 
// The response message containing the greetings
message QueryReply {
    string message = 1;
}
 